# ai-desktop-agent-appFunction-poc

./: .gitignore  README.md  agent.py  pyproject.toml
web/: app.py
web/static/: index.html
