[project]
name = "projector-agent-desktop"
version = "0.1.0"
description = "Desktop NLP agent that drives the projector blending app via ADB + AppFunctions."
requires-python = ">=3.11"
dependencies = [
    "ollama>=0.4",
    "flask>=3.0",
]

[project.optional-dependencies]
# Swap LLM provider by installing extras + editing agent.py.
anthropic = ["anthropic>=0.40"]
gemini = ["google-generativeai>=0.8"]
openai = ["openai>=1.50"]

[tool.uv]
# Use `uv sync` to install; `uv run python agent.py` to run.
